Move generic patterns into four committed Claude Code skills
Splits CLAUDE.md into: (a) project-specific guidance it keeps, and (b) four
reusable skills under .claude/skills/ that any future session or agent can
invoke instead of re-deriving the patterns inline.

- new-gradle-project/  — TOML version catalog, condensed JUnit, Ben-Manes,
  gradle.properties JVM args, build.gradle.kts skeleton with split
  compileJava / compileTestJava release targets.

- new-recipe/          — moderneinc/rewrite-recipe-starter bootstrap, the
  src/main/resources/META-INF/rewrite/ manifest location, visitor structure
  with package-private helpers, MethodMatcher, YAML composition, @Option
  patterns, and the marker-preserving argument-level tree edit that keeps
  Groovy DSL paren-less.

- recipe-testing/      — the two-layer integration (*Test) vs unit
  (*MethodTest) split, RewriteTest + TypeValidation.none() for Lombok,
  multi-source rewriteRun, GradleProject marker injection for multi-module
  simulation, matrix-test layout, and when a /tmp smoke test is required.

- smoke-test/          — /tmp throwaway project bootstrap, the dryRun →
  inspect → Run → compileJava cycle, project-shape matrix design, the
  include vs includeBuild distinction, expected-outcomes table, and the
  resolve-by-mavenLocal-coordinates check.

CLAUDE.md now covers only: project structure specific to this repo, the
publication workflow (quality gates → SMOKE_TEST.md → README → BACKLOG →
version bump → publish → tag), and the coding standards SpotBugs / the
compiler don't catch.

README.md gains a "For maintainers" section that explicitly calls out all
four skills as IMPORTANT, so any agent coming in cold lands on them.

.gitignore updated to exclude the user-local .claude/settings.local.json
while keeping .claude/skills/ committed.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>